# Healthcare-AI-Triage-Assistant

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-advanced.txt  requirements.txt
.github/workflows/: ci.yml
docs/: method_review.md
kb/docs/: chest_pain_guidance.md  emergency_red_flags.md  fever_respiratory_guidance.md
scripts/: advanced_train.py  agent_demo.py  demo.py  evaluate.py  generate_synthetic_data.py  index_kb.py  train.py
src/healthcare_ai_agent/: __init__.py  agent.py  cli.py  constants.py  inference.py  labeling.py  modeling.py  preprocessing.py  rag.py  recommendation.py
tests/: test_agent.py  test_inference_policy.py  test_labeling.py  test_rag.py  test_recommendation.py
